[Update] inputenc: utf8x --> utf8

--- a/yoko-book-template.tex
+++ b/yoko-book-template.tex
@@ -7,7 +7,7 @@
 %% フォント関連
 \usepackage[T1]{fontenc} % フォントでT1を使うこと
 \usepackage{textcomp} % フォントでTS1を使うこと
-\usepackage[utf8x]{inputenc} % ファイルがUTF8であること
+\usepackage[utf8]{inputenc} % ファイルがUTF8であること
 \usepackage{newpxtext,newpxmath} % ローマンと数式の字体をPalatinoに基づいた新PXフォントで
 \usepackage{zi4}%等幅フォントをInconsolataで
 \usepackage[multi,deluxe,jis2004]{otf}
