[Fix] To output ajLig with geometric shapes properly

--- a/yoko-book-template.tex
+++ b/yoko-book-template.tex
@@ -12,7 +12,7 @@
 \usepackage{zi4}%等幅フォントをInconsolataで
 \usepackage[multi,deluxe,jis2004]{otf}
 \usepackage[prefernoncjk]{pxcjkcat} % なるべく「半角」扱いで。
-
+\cjkcategory{sym18}{cjk} % sym18 (U+25A0 - U+25FF Geometric Shapes) を和文文字あつかい
 
 %% 図表など
 % 図の読みこみのために
