[Update] Change labels

--- a/yoko-book-template.tex
+++ b/yoko-book-template.tex
@@ -236,13 +236,13 @@
 
 
 \section{図表}
-最初の図の番号は「図\ref{fg:barplot-example}」である。
+最初の図の番号は「図\ref{fg:figure-example}」である。
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.8\hsize]{barplot01.pdf}
   \caption{これは図の例で、棒グラフが書かれている。}
-  \label{fg:barplot-example}
+  \label{fg:figure-example}
 \end{figure}
 
 
