[Update] Change the example for kanbun

--- a/tate-book-template.tex
+++ b/tate-book-template.tex
@@ -164,9 +164,9 @@
 
 \section{漢文}
 
-% \kundoku{漢字}{ルビ}{送り仮名}{返り点}[肩返り点](句読点)
+% \kundoku{漢字}{ルビ}{送り仮名}{返り点}[肩返り点]<左送り仮名>(句読点)
 
-\kundoku{未}{いま}{ダ}{レ}
+\kundoku{未}{いま}{ダ}{レ}<ル>
 \kundoku{知}{}{ラ}{二}
 仁
 \kundoku{義}{}{ヲ}{一}
