[Update] Change a section title

--- a/tate-book-template.tex
+++ b/tate-book-template.tex
@@ -130,7 +130,7 @@
 
   \bou{傍点}・\kenten{圏点}・\kasen{傍線}
 
-\section{特殊文字}
+\section{特殊文字など}
 
   \ajMaru{0} \ajMaru{5} \ajMaru{42} \ajMaru{100}
   \ajMaru*{0} \ajMaru*{5} \ajMaru*{42} \ajMaru*{100}
